# zynq_cnn

./: README.md
hls_cnn/_ide/: .peers.ini  settings.json  version.ini  workspace_journal.py  workspace_journal_12000.py  workspace_journal_12504.py  workspace_journal_17088.py  workspace_journal_2024.py  workspace_journal_20764.py  workspace_journal_22404.py  workspace_journal_5428.py  workspace_journal_7048.py  workspace_journal_9560.py  workspace_journal_9988.py
hls_cnn/hls_component/: cnn_layer.cpp  cnn_layer.h  compile_commands.json  hls_config.cfg  test.cpp  vitis-comp.json  weights.h
hls_cnn/hls_component/hls_component/: hls_component.hlscompile_summary  hls_component.hlsrun_csim_summary  hls_component.hlsrun_package_summary  vitis-comp.json
hls_cnn/hls_component/hls_component/hls/: config.cmdline  hls_data.json
hls_cnn/hls_component/hls_component/hls/.autopilot/db/driver/src/: CMakeLists.txt
hls_cnn/hls_component/hls_component/reports/: hls_cosim.rpt  v++_compile_hls_component_guidance.html
vitis_ps/_ide/: .peers.ini  .vitisPlatformRepo.json  version.ini  workspace_journal.py  workspace_journal_11244.py  workspace_journal_2020.py  workspace_journal_29636.py
vitis_ps/hello_world/: 1.bif  compile_commands.json  vitis-comp.json
vitis_ps/hello_world/_ide/: hwspec.checksum  launch.json
vitis_ps/hello_world/src/: CMakeLists.txt  UserConfig.cmake  app.yaml  helloworld.c  lscript.ld  weights.c  weights.h
vitis_ps/platform/: vitis-comp.json
vitis_ps/platform/hw/: design_1_wrapper.xsa
vitis_ps/platform/zynq_fsbl/: app.yaml
(+953 files in other folders)
